# CPP_3DViewer

src/: Makefile
src/3DViewerCpp/: CMakeLists.txt  Makefile  controler.cc  controler.h  gl.cc  gl.h  main.cc  matrix_lite.h  matrix_lite.tpp  model.cc  model.h  model_pars_obj_afin.cc  model_pars_obj_afin.h  model_save_img.cc  model_save_img.h  save_settings_model.cc  save_settings_model.h  veiw.cc  veiw.h  veiw.ui
src/bash/: clean.sh  install.sh
src/info/: dvi.html
src/test/: s21_test.cc
